deploy/apps/synapse/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
